# xkcd-vk

./: .env.example  .gitignore  main.py  pyproject.toml  readme.md  vk.py  xkcd.py
